# miaubot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.build  Makefile  README.md  RELEASE_GUIDE.md  build.sh  config.py  docker-compose.yml  main.py  miaubot.py  pyproject.toml
.github/workflows/: build.yml  docker-publish.yml  release.yml
scripts/: version.sh
scripts/filebot/: movies.local.groovy  tv-shows.local.groovy
src/: args.py  config.py  main.py  version.py
src/utils/: file_info.py  media_info.py  rclone.py  report.py
